# a2pitest

./: .gitignore  .gitmodules  Makefile  Readme.md  a2mon  a2reset.py  runall.sh
a2pi-update/: Readme.md  a2pi.patch  a2pid.patch  a2reset.py  a2startvd  a2stopvd  ac.sh  installa2startvd.sh
asmHello/: Makefile  asmhello.po  hello  hello.map  hello.s
basicHello/: Makefile  basicTest.po  helloTest.bas
cHello/: Makefile  chello.po  hello  hello.c  hello.map  hello.s  text.s
src/asmHello/: CMakeLists.txt  Makefile  apple2bin.cfg  build.sh  hello
src/basicHello/: Makefile  basecTest.PO  basecTest.po.PO  build.sh
src/cHello/: CMakeLists.txt  Makefile  build.sh  hello  hello.s
tmp/: Makefile
